syntax = "proto3";

package regen.orm.v1alpha1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/regen-network/regen-ledger/orm/v2/types";

extend google.protobuf.MessageOptions {
  TableDescriptor table = 100000000;
  SingletonDescriptor singleton = 100000001;
}

message TableDescriptor {
  PrimaryKeyDescriptor primary_key = 1;

  repeated SecondaryIndexDescriptor index = 2;

  // id is an integer ID for the table that must be unique within the kv-store
  // used for this ORM instance. It will be deprecated in the future when this
  // can be auto-generated.
  uint32 id = 3;
}

message PrimaryKeyDescriptor {
  // fields is a comma-separated list of fields in the primary key.
  string fields = 1;

  // auto_increment specifies that the primary key is generated by an
  // auto-incrementing integer. If this is set to true fields must only
  // contain one field of that is of an integral type.
  bool auto_increment = 2;
}

message SecondaryIndexDescriptor {
  // fields is a comma-separated list of fields in the index.
  string fields = 1;

  // id is an integer ID for the index within the indexes for this table.
  // It will be deprecated in the future when this can be auto-generated.
  uint32 id = 2;
}

message SingletonDescriptor {
  // id is an integer ID for the singleton that must be unique within the kv-store
  // used for this ORM instance. It will be deprecated in the future when this
  // can be auto-generated.
  uint32 id = 1;
}
